fixed position of nav menu toggle button on mobile, and adjusted menu positioning and width

--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ header img {
 .navbar {
   display: flex;
   align-items: end;
-  justify-content: space-around;
+  justify-content: space-between;
   border-bottom: #0b121d 1px solid;
 }
 
@@ -87,8 +87,9 @@ nav,
 #menu-checkbox:checked ~ nav {
   display: block;
   position: absolute;
+  width: 200px;
   top: 130px;
-  left: 50%;
+  left: 60%;
   padding: 10px;
   background-color: var(--footer-color);
   border-radius: 5px;
